--- a/.github/workflows/squarecloud.yaml
+++ b/.github/workflows/squarecloud.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Dependencies
         run: npm i
 
+      - name: Build Project
+        run: npm run build
+
       - name: Setup Square Cloud
         uses: squarecloudofc/github-action@v2
         with:
